# hermes-office-core-plugin

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  __init__.py  pyproject.toml
.codex-plugin/: plugin.json
.github/: pull_request_template.md  release-notes-template.md
docs/: architecture.md  codebase-review-tasks.md  marketplace-readiness.md  office-self-evolution.md  product-correctness-roadmap.md
examples/: workflows.md
hooks/: completion_hook.py  hooks.json  intake_router_hook.py  office_hook.py  office_hook_spec.py  run-python.ps1  session-start-office-os.json  session_context_hook.py  stop-office-os.json  tool_guard_hook.py  tool_outcome_hook.py  user-prompt-submit-office-os.json
office_core_plugin/: bridge_planner.py  bridge_profiles.py  completion_validation.py  data_maps.py  e2e_fixtures.py  e2e_office_workflow_fixtures.py  e2e_workflows.py  handler_contract.py  local_file_candidates.py  local_file_discovery.py  local_files_adapter.py  operation_classifier.py  operation_policy.py  plugin.py  plugin.yaml  redaction.py  registry_base.py  registry_core.py  registry_data.py  registry_models.py  registry_store.py  safe_path.py  task_contract.py  tool_handlers.py  workflow_plan_contract.py
scripts/: ci_test_runner.py  install_office_os.ps1  office_hook_activation.py  office_hook_doctor.py  office_hook_registry.py  office_hook_toml.py  officecli-mcp.cjs  officecli_manager.py  officecli_runtime.py  render_office_hooks.py
tests/: hook_test_support.py  register_contract_helpers.py  test_audit_schema.py  test_ci_test_runner.py  test_completion_validation.py  test_contracts.py  test_data_maps.py  test_directory_plugin_loader.py  test_e2e_office_workflows.py  test_handler_contract.py  test_hook_activation.py  test_hook_completion.py  test_hook_completion_safety.py  test_hook_diagnostics.py  test_hook_dispatch.py  test_hook_docs_contract.py  test_hook_doctor.py  test_hook_environment.py  test_hook_intake.py  test_hook_intake_boundary.py  test_hook_intake_state.py  test_hook_migration_contract.py  test_hook_registry.py  test_hook_registry_migration.py  test_hook_session.py  test_hook_spec.py  test_hook_tools.py  (+20 more)
tests/fixtures/bad-plugin-missing-manifest/: README.md  __init__.py  pyproject.toml
tests/fixtures/bad-plugin-missing-manifest/office_core_plugin/: __init__.py  plugin.py  plugin.yaml
(+84 files in other folders)
