[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-office-core-plugin"
version = "0.1.0"
description = "Standalone Hermes Agent office workflow plugin"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Tinycute00" }]
keywords = ["hermes-agent", "hermes-plugin", "office-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.8",
    "setuptools>=68",
    "wheel>=0.42",
]

[project.entry-points."hermes_agent.plugins"]
office-core = "office_core_plugin:register"

[tool.setuptools]
packages = ["office_core_plugin"]
py-modules = []
include-package-data = true

[tool.setuptools.package-data]
office_core_plugin = ["py.typed", "plugin.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D",
    "D203",
    "D213",
    "FIX002",
    "ISC001",
    "N999",
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = [
    "INP001",
    "S603",
    "T201",
]
"tests/**/*.py" = [
    "ARG",
    "D",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
