[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "bad-plugin-missing-manifest"
version = "0.1.0"
description = "Broken fixture without MANIFEST.in"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.entry-points."hermes_agent.plugins"]
office-core = "office_core_plugin:register"

[tool.setuptools]
packages = ["office_core_plugin"]
py-modules = []
include-package-data = true

[tool.setuptools.package-data]
office_core_plugin = ["py.typed", "plugin.yaml"]

[tool.ruff]
target-version = "py311"
